--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project1",
-  "homepage": "https://Jay-1703.github.io/Textchangerapp",
+  "homepage": "https://Jay-1703.github.io/Textchanger",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
